2007-11-26  Eric Seidel  <eric@webkit.org>
        Reviewed by Maciej.

        Remove no longer used error code JSRegExpErrorMatchLimit

        * kjs/regexp.cpp:
        (KJS::RegExp::match):
        * pcre/pcre.h:
        * pcre/pcre_internal.h:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28173 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -26,6 +26,17 @@
 
 2007-11-26  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Maciej.
+
+        Remove no longer used error code JSRegExpErrorMatchLimit
+
+        * kjs/regexp.cpp:
+        (KJS::RegExp::match):
+        * pcre/pcre.h:
+        * pcre/pcre_internal.h:
+
+2007-11-26  Eric Seidel  <eric@webkit.org>
+
         Reviewed by Sam.
 
         Make i locally scoped for better code clarity
