2007-11-26  Eric Seidel  <eric@webkit.org>
        Reviewed by Mitz.

        Remove branch from return

        * pcre/pcre_compile.cpp:
        (compile_branch):
        * pcre/pcre_exec.cpp:
        (match):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28175 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -26,6 +26,17 @@
 
 2007-11-26  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Mitz.
+
+        Remove branch from return
+
+        * pcre/pcre_compile.cpp:
+        (compile_branch):
+        * pcre/pcre_exec.cpp:
+        (match):
+
+2007-11-26  Eric Seidel  <eric@webkit.org>
+
         Reviewed by Maciej.
 
         Add repeatInformationFromInstructionOffset inline
