--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -41,6 +41,15 @@
 
 2007-11-26  Eric Seidel  <eric@webkit.org>
 
+        Reviewed by Oliver.
+
+        Deprecate jsRegExpExecute's offset-vector fallback code
+
+        * pcre/pcre_exec.cpp:
+        (jsRegExpExecute):
+
+2007-11-26  Eric Seidel  <eric@webkit.org>
+
         Reviewed by Maciej.
 
         Make cur_is_word and prev_is_word locals, and change OP_ANY to OP_ANY_CHAR for clarity
