2007-11-26  Eric Seidel  <eric@webkit.org>
        Reviewed by Sam.

        Give consistent naming to the RegExp options/compile flags

        * pcre/pcre_compile.cpp:
        (compile_branch):
        (is_anchored):
        (find_firstassertedchar):
        (printCompiledRegExp):
        (jsRegExpCompile):
        * pcre/pcre_exec.cpp:
        (jsRegExpExecute):
        * pcre/pcre_internal.h:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28183 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -43,6 +43,16 @@
 
         Reviewed by Sam.
 
+        Further cleanups to calculateCompiledPatternLengthAndFlags
+
+        * pcre/pcre_compile.cpp:
+        (calculateCompiledPatternLengthAndFlags):
+        * pcre/pcre_internal.h:
+
+2007-11-26  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Sam.
+
         Give consistent naming to the RegExp options/compile flags
 
         * pcre/pcre_compile.cpp:
