--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-29  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Beth Dakin and Darin Adler.
+
+        - manual test for <rdar://problem/5346394> Contextmenu event doesn't fire on body element inside frame
+
+        * manual-tests/context-click-unfocused-frame.html: Added.
+
 2007-11-28  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Geoff.
