--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-29  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Beth Dakin and Darin Adler.
+
+        - fix <rdar://problem/5346394> Contextmenu event doesn't fire on body element inside frame
+
+        * WebView.cpp:
+        (WebView::handleContextMenuEvent): Send the context menu event to the
+        frame containing the node that was hit.
+
 2007-11-28  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Tim.
