Reviewed by Geoff.
        Fix for <rdar://problem/5620151> Disable JavaScript for SVG as 
        image for <img> and CSS images

        * platform/graphics/svg/SVGImage.cpp:
        (WebCore::SVGImage::dataChanged): When we create the empty clients, 
        explicitly disable JavaScript in the settings.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28193 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-29  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Geoff.
+
+        Fix for <rdar://problem/5620151> Disable JavaScript for SVG as 
+        image for <img> and CSS images
+
+        * platform/graphics/svg/SVGImage.cpp:
+        (WebCore::SVGImage::dataChanged): When we create the empty clients, 
+        explicitly disable JavaScript in the settings.
+
 2007-11-29  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Anders
