--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-29  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Adam.
+
+        <rdar://problem/5132005>
+        setUserStyleSheetEnabled is not fully implemented in Windows DRT.
+        
+        * platform/win/Skipped:
+
 2007-11-28  Mark Rowe  <mrowe@apple.com>
 
         Unreviewed layout test fix.  Fix typos in the name of four files used by HTTP layout tests.
