Better build fix for Gtk
        * WebCoreSupport/ChromeClientGtk.h:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28196 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-29  Brady Eidson  <beidson@apple.com>
 
+        Better build fix for Gtk
+
+        * WebCoreSupport/ChromeClientGtk.h:
+
+2007-11-29  Brady Eidson  <beidson@apple.com>
+
         Keep it building with new client method
 
         * WebCoreSupport/ChromeClientGtk.cpp:
