- Build fix.  Added additional includes for VS Express to the Release         project.
        * Drosera/win/Drosera.vcproj/Drosera.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28197 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-29  Kevin McCullough  <kmccullough@apple.com>
+
+        - Build fix.  Added additional includes for VS Express to the Release
+        project.
+
+        * Drosera/win/Drosera.vcproj/Drosera.vcproj:
+
 2007-11-29  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Adam.
