Build fix that works...?
        * WebChromeClient.h:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28198 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-29  Brady Eidson  <beidson@apple.com>
 
+        Build fix that works...?
+
+        * WebChromeClient.h:
+
+2007-11-29  Brady Eidson  <beidson@apple.com>
+
         Build fix
 
         * WebChromeClient.cpp:
