--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-29  Alice Liu  <alice.liu@apple.com>
+
+        Removing some fixed tests
+
+        * platform/win/Skipped:
+
 2007-11-29  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Adam.
