--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,12 @@
 2007-11-29  Alice Liu  <alice.liu@apple.com>
 
+        Reviewed by Adam.
+
+        * platform/win/Skipped: Recategorized one failing test and removed a
+        passing test.
+
+2007-11-29  Alice Liu  <alice.liu@apple.com>
+
         Removing <rdar://5507350> from skipped list because it's not failing.
 
         * platform/win/Skipped:
