--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-29  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Sam.
+
+        <rdar://problem/5230478>
+        FrameLoadDelegate callbacks are not dumped in DRT.        
+
+        Remove now passing tests.
+
+        * platform/win/Skipped:
+
 2007-11-29  Alice Liu  <alice.liu@apple.com>
 
         Reviewed by Adam.
