* platform/win/Skipped: Added editing/selection/5241148.html, which crashes for me.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28232 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-30  Alexey Proskuryakov  <ap@webkit.org>
+
+        * platform/win/Skipped: Added editing/selection/5241148.html, which crashes for me.
+
 2007-11-29  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
 
         Reviewed by Maciej.
