Other wx port fixes needed to restore the build bot.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28250 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/wx/ChangeLog
+++ b/WebKit/wx/ChangeLog
@@ -1,5 +1,13 @@
 2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
 
+        Fix method signatures to be members of ClientChromeWx class.
+
+        * WebKitSupport/ChromeClientWx.cpp:
+        (WebCore::ChromeClientWx::requestQuotaIncreaseForNewDatabase):
+        (WebCore::ChromeClientWx::requestQuotaIncreaseForDatabaseOperation):
+
+2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
+
         Build fix. Add platform/text to includes for targets that
         need WebCore headers.
 
