--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-30  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Build fix for wx port. Adding editing/RemoveFormatCommand.cpp
+
+        * WebCoreSources.bkl:
+
 2007-11-30  Simon Hausmann  <hausmann@webkit.org>
 
         Reviewed by Adam Roben.
